kmom01/css/style.css
/**
 * MAIN STYLESHEET
 */
@import url(links.css);

/**
 * General elements
 */
body {
  color: #333;
  font-family: arial, sans-serif;
}
 
/**
 * Layout of the main page elements 
 */
#wrapper {
  margin: 0 auto;
  width: 980px; 
  padding: 10px;
}
 
 
/**
 * Layout for header
 */
#header {
  position: relative;
  margin-bottom: 40px;
}
 
.sitetitle {
  position: absolute;
  top: 6px;
  left: 130px;
  font-size: 48px;
}
 
.siteslogan {
  position: absolute;
  top: 65px;
  left: 130px;
  font-style: italic;
  color: #666;
}
 
 
/**
 * Layout for main
 */
#main {
  min-height: 20em;
}
 
 
/**
 * Layout for footer
 */
#footer {
  margin-top: 40px;
  border-top: 1px solid #ccc;
  padding-top: 15px;
}
 
.sitefooter {
  color: #666;
}

